# hw_10

./: .gitignore  config.py  manage.py  pyproject.toml
app_auth/: forms.py  urls.py  views.py
app_auth/templates/app_auth/: login.html  registration.html
authors/: forms.py  models.py  urls.py  views.py
authors/migrations/: 0001_initial.py
authors/static/authors/: style.css
authors/templates/authors/: author_detail.html  create_author.html
hw_10/: settings.py  urls.py
quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
quotes/static/quotes/: style.css
quotes/templates/quotes/: base.html  create_quote.html  index.html
quotes/templatetags/: author_filters.py
utils/: add_authors_to_postgres.py  add_quotes_to_postgres.py  authors.json  quotes.json
