[tool.poetry]
name = "hw-10"
version = "0.1.0"
description = ""
authors = ["KarynaNester <liubatskakarina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
